code/UI/InspectorPanel.razor.scss
InspectorPanel
{
    position: absolute;
    width: 300px;
    height: 120px;
    background-color: rgba(black, 0.7);
    opacity: 1;
    transition: opacity 0.2s ease-out;
    padding: 8px;
    color: white;
    font-family: Poppins;
    font-size: 16px;
    border-radius: 16px;
    flex-direction: column;
    gap: 8px;

    .header
    {
        .segments
        {
            flex-grow: 1;
            justify-content: flex-end;
            gap: 8px;

            > div
            {
                width: 24px;
                height: 24px;
                border-radius: 4px;
            }
        }
    }

    .healthbar
    {
        width: 100%;
        height: 32px;
        padding: 4px;
        background-color: #333;

        .inner
        {
            width: 100%;
            height: 100%;
            background-color: black;

            .fill
            {
                height: 100%;
            }
        }
    }

    &.hidden
    {
        opacity: 0;
    }
}

